# opensource

./: .gitignore  NAMES.md  README.md  helper.hs  stack.yaml  strict-data.cabal
.circleci/: config.yml
graph-core/: .gitignore  LICENSE  README.md  graph-core.cabal  stack.yaml
graph-core/src/: Tests.hs
graph-core/src/Data/Core/: Graph.hs
graph-core/src/Data/Core/Graph/: NodeManager.hs  Persistence.hs  PureCore.hs
graph-core/src/Test/: Arbitrary.hs  Core.hs  NodeManager.hs  Persistence.hs
preview/: LICENSE  README.md  preview.cabal
preview/src/Data/: Preview.hs
src/Data/: Choice.hs  Fail.hs  Option.hs  StrictList.hs  StrictTuple.hs
src/Data/Fail/: Types.hs
src/Data/StrictList/: Types.hs
strict-data/: LICENSE  README.md  strict-data.cabal
strict-data/src/Data/: Choice.hs  Fail.hs  Option.hs  StrictList.hs  StrictVector.hs
strict-data/src/Data/Fail/: Types.hs
strict-data/src/Data/Map/: Ordered.hs  Unordered.hs
strict-data/src/Data/StrictList/: Types.hs
strict-data/src/Data/StrictVector/: Mutable.hs
strict-data/test/: Doc.hs  Fail.hs  Spec.hs  StrictList.hs  StrictVector.hs
strict-data/test/Data/Map/: OrderedSpec.hs
strict-data/test/StrictVector/: Mutable.hs
test/: Option.hs  Spec.hs  StrictList.hs
text-plus/: README.md  text-plus.cabal
text-plus/src/Data/Text/: Plus.hs
text-plus/test/: Spec.hs
text-plus/test/Data/Text/: PlusSpec.hs
util-plus/: LICENSE  README.md  util-plus.cabal
util-plus/src/Control/Applicative/: Plus.hs
util-plus/src/Data/List/: Plus.hs
util-plus/src/GHC/Stack/: Plus.hs
util-plus/src/Safe/: Plus.hs
util-plus/test/: Spec.hs
util-plus/test/Data/List/: PlusSpec.hs
util-plus/test/GHC/Stack/: PlusSpec.hs
util-plus/test/Safe/: PlusSpec.hs
