name:                strict-data
version:             0.1.2.0
synopsis:            Various useful strict data structures
description:         Please see README.md
homepage:            https://github.com/agrafix/strict-data#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann
maintainer:          mail@athiemann.net
copyright:           2016 Alexander Thiemann <mail@athiemann.net>
category:            Data
build-type:          Simple
extra-source-files:
    README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Option
                     , Data.StrictList
                     , Data.StrictTuple
  other-modules:       Data.StrictList.Types
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , aeson
                     , deepseq
                     , fail
                     , hashable
                     , mtl
                     , pretty
                     , strict
                     , text
                     , unordered-containers
  default-language:    Haskell2010

test-suite strict-data-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Option
                     , StrictList
  build-depends:       base >= 4.7 && < 5
                     , strict-data
                     , HTF

source-repository head
  type:     git
  location: https://github.com/agrafix/strict-data
