name:                strict-data
version:             0.2.0.0
synopsis:            A collection of commonly used strict data structures
description:         A collection of commonly used strict data structures
homepage:            https://github.com/agrafix/strict-data#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann
                   , factis research GmbH
maintainer:          mail@athiemann.net
copyright:           2016 Alexander Thiemann <mail@athiemann.net>
                   , 2017 factis research GmbH
category:            Data
build-type:          Simple
extra-source-files:
    README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Choice
                     , Data.Fail
                     , Data.Option
                     , Data.StrictList
                     , Data.StrictTuple
  other-modules:       Data.Fail.Types
                     , Data.StrictList.Types
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , aeson
                     , deepseq
                     , exceptions
                     , fail
                     , hashable
                     , monad-control
                     , mtl
                     , pretty
                     , resourcet
                     , strict
                     , text
                     , transformers
                     , transformers-base
                     , unordered-containers
  default-language:    Haskell2010
  ghc-options:       -Wall

test-suite strict-data-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Option
                     , StrictList
  build-depends:       base >= 4.7 && < 5
                     , strict-data
                     , HTF
  ghc-options:       -Wall

source-repository head
  type:     git
  location: https://github.com/factisresearch/strict-data
